--- a/frontend/src/app/menu/component/menu/menu.component.html
+++ b/frontend/src/app/menu/component/menu/menu.component.html
@@ -23,7 +23,7 @@
                     <option value="dark">Nero</option>
                 </select>
             </div>
-            <div class="col-12">
+            <div class="col-12 mt-3">
                 <ng-container *ngFor="let printerCfg of printerCfgList">
                     <div class="form-check form-check-inline form-switch">
                         <input class="form-check-input printercfg-input" type="checkbox" [value]="printerCfg?.id" (change)="onPrinterCfgChange($event)">
@@ -31,7 +31,7 @@
                     </div>
                 </ng-container>
             </div>
-            <div class="col-6">
+            <div class="col-6 mt-3">
                 <button type="submit" class="btn btn-primary d-flex justify-content-around align-items-center">
                     <span class="material-icons-outlined">add</span>
                     <span class="text">Aggiungi</span>
