#34 fixed attributes on template cfg list

--- a/frontend/src/app/printer/component/printer/printer.component.html
+++ b/frontend/src/app/printer/component/printer/printer.component.html
@@ -93,11 +93,12 @@
         </div>
         <h6 class="card-subtitle mt-3">{{printerCfg?.description}}</h6>
         <div class="card-body">
-          <div class="row my-1">
+          <div class="row">
             <div class="col-6">Stampante: {{printerCfg?.printerName}}</div>
             <div class="col-6">Template report: {{printerCfg?.reportTemplate}}</div>
           </div>
-          <div class="row my-1">
+          <div class="row my-3">
+            <h6>Attributi</h6>
             <div class="col-6">Formato stampa: {{printerCfg?.attrs?.mediaSize}}</div>
             <div class="col-6">Orientamento: {{printerCfg?.attrs?.orientation}}</div>
             <div class="col-6">Colore: {{printerCfg?.attrs?.color}}</div>
