--- a/frontend/src/app/order/component/order-form/order-form.component.html
+++ b/frontend/src/app/order/component/order-form/order-form.component.html
@@ -41,16 +41,19 @@
                         <tr>
                             <th scope="col">Descrizione</th>
                             <th scope="col">Quantità</th>
+                            <th scope="col">Prezzo</th>
                             <th scope="col">Totale</th>
                             <th scope="col">Note</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of orderItemList">
-                            <td>{{item.menuItem?.name}}</td>
+                            <td>{{item?.menuItemName}}</td>
                             <td>{{item?.quantity}}</td>
+                            <td>{{item?.menuItemPrice}}</td>
                             <th scope="row">{{item?.totalPrice}}</th>
                             <td>{{item?.note}}</td>
+                          <!-- todo aggiungere pulsanti +/- per aggiungere/rimuovere quantità item -->
                         </tr>
                     </tbody>
                 </table>
