#48 fixed title for order form.

--- a/frontend/src/app/order/component/order-form/order-form.component.html
+++ b/frontend/src/app/order/component/order-form/order-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Nuovo Ordine</h3>
+    <h3>{{title}}</h3>
     <!-- order data form -->
     <form [formGroup]="orderForm">
         <div class="row">
@@ -40,7 +40,7 @@
                     <thead class="table-light">
                         <tr>
                             <th scope="col">Descrizione</th>
-                            <th scope="col">Quantità</th>
+                            <th scope="col">Qa</th>
                             <th scope="col">Prezzo</th>
                             <th scope="col">Totale</th>
                             <th scope="col">Note</th>
