#16 add security service and login, registration pages

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<navbar></navbar>
+<navbar [isLoggedIn]="isLoggedIn" [username]="username"></navbar>
 <div class="row m-0 dashboard-container">
     <div class="col p-0 mt-4">
         <router-outlet></router-outlet>
