--- a/backend/business/src/main/resources/templates/kitchen_template.html
+++ b/backend/business/src/main/resources/templates/kitchen_template.html
@@ -61,8 +61,7 @@
     </thead>
     <tbody>
     <tr>
-        <td th:text="'Cassiere ' + ${order.cashier}"/>
-        <td th:text="'' + ${order.zonedDateTime}"/>
+        <td th:text="'' + ${#dates.format(order.creationTimestamp, 'dd-MM-yyyy HH:mm')}"/>
         <td>COPIA CUCINA</td>
     </tr>
     </tbody>
